test/sema/generics/generic_argument_count_mismatch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: number }

fn foo<T, U>(): unit {}

fn main(): unit {
  // CHECK: [[# @LINE + 1 ]]:4: error: type argument count mismatch, expected 1, but received 2
  S@<number, number>{ x: 1 };

  // CHECK: [[# @LINE + 1 ]]:6: error: type argument count mismatch, expected 2, but received 1
  foo@<unit>();
}

// CHECK-NOT: {{.*error.*}}
